--- a/pom.xml
+++ b/pom.xml
@@ -29,12 +29,15 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>tomcat-maven-plugin</artifactId>
-				<version>1.1-SNAPSHOT</version>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
 				<configuration>
-					<url>http://localhost:8080/manager/html</url>
+					<url>http://localhost:8080/manager/text</url>
 					<server>tomcat</server>
+					<username>zetta</username>
+					<password>zetta</password>
+					<path>/diaomen</path>
 				</configuration>
 			</plugin>
 		</plugins>
