--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,8 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
-	<name>diaomen</name>
-	<url>http://maven.apache.org</url>
-
+	<name>${project.artifactId}</name>
+	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -23,20 +22,20 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 			<version>3.0-alpha-1</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
 	<build>
+		<finalName>${project.artifactId}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.2</version>
 				<configuration>
-					<url>http://localhost:8080/manager/text</url>
-					<server>tomcat</server>
-					<username>zetta</username>
-					<password>zetta</password>
+					<url>http://localhost:8080/manager</url>
+					<server>tomcat7</server>
 					<path>/diaomen</path>
 				</configuration>
 			</plugin>
